# auto_utils

./: Cargo.toml
image_utils/: Cargo.toml
image_utils/src/: color_detection.rs  consts.rs  image_match.rs  image_match_error.rs  lib.rs  saving.rs  screenshot.rs  screenshot_error.rs  types.rs  utils.rs
input_utils/: Cargo.toml
math_utils/: Cargo.toml
math_utils/src/: lib.rs
os/: Cargo.toml
os_utils/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
